plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'resolveit'
version = '0.1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

javafx {
    version = '25.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation 'tools.jackson.core:jackson-databind:3.1.5'

    testImplementation 'org.junit.jupiter:junit-jupiter:6.1.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.1.3'
}

application {
    mainClass = 'resolveit.frontend.ResolveItApplication'
    applicationDefaultJvmArgs = ['--enable-native-access=javafx.graphics']
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '--add-modules', 'jdk.httpserver'
}
